PXEPR-218    fix overflow scrollbar on Win

--- a/src/common/ui/table/table.component.scss
+++ b/src/common/ui/table/table.component.scss
@@ -15,7 +15,7 @@
 
 .table-wrapper {
 	&--advanced {
-		overflow-x: scroll;
+		overflow-x: auto;
 		width: calc( 100% + ( #{$spacer} * 2 ) );
 		margin: 0 ( $spacer * ( -1 ) ) ( $spacer * ( -1 ) );
 		padding: 0 $spacer ( $spacer * 2 );
